# simple_cuda_kernel_lib

./: CMakeLists.txt  README.md
include/: simple.h
src/: interface.cpp  simple.cu
